# nanosearch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: NANOSEARCH_BUG_FIXES.md  NANOSEARCH_BUG_REPORT.md
src/: error.rs  lib.rs  main.rs  schema.rs  stats.rs
src/cmd/: hooks.rs  index.rs  mod.rs  search.rs  status.rs
src/indexer/: incremental.rs  language.rs  mod.rs  symbols.rs  walker.rs  writer.rs
src/searcher/: context.rs  format.rs  mod.rs  query.rs  spans.rs
tests/: integration_hooks.rs  integration_incremental.rs  integration_index.rs  integration_search.rs
tests/common/: mod.rs
tests/fixtures/sample_repo/: README.md  config.json
tests/fixtures/sample_repo/src/: event_manager.ex  event_store.rs  handlers.ts  models.py  server.go  utils.js  validator.rs
