[package]
name = "ns"
version = "0.1.1"
edition = "2021"

[dependencies]
tantivy = "0.25"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
libc = "0.2"

tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = "3"
